// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mg-input-date Should render with args {
  label: 'label',
  identifier: 'identifier',
  readonly: true,
  value: '2021-10-15'
}: 1`] = `
<mg-input-date value="2021-10-15">
  <mock:shadow-root>
    <div class="mg-input mg-input--date mg-input--readonly">
      <mg-label identifier="identifier">
        label
      </mg-label>
      <div class="mg-input__input-container">
        <strong>
          15/10/2021
        </strong>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date Should render with args {
  label: 'label',
  identifier: 'identifier',
  tooltip: 'My Tooltip Message'
}: 1`] = `
<mg-input-date>
  <mock:shadow-root>
    <div class="mg-input mg-input--date">
      <mg-label identifier="identifier">
        label
      </mg-label>
      <div class="mg-input__input-container">
        <div class="mg-input__input-container__input">
          <input aria-describedby="" id="identifier" name="identifier" type="date">
          <mg-tooltip identifier="identifier-tooltip" message="My Tooltip Message">
            <mg-icon icon="info"></mg-icon>
          </mg-tooltip>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date Should render with args { label: 'label', identifier: 'identifier' }: 1`] = `
<mg-input-date>
  <mock:shadow-root>
    <div class="mg-input mg-input--date">
      <mg-label identifier="identifier">
        label
      </mg-label>
      <div class="mg-input__input-container">
        <div class="mg-input__input-container__input">
          <input aria-describedby="" id="identifier" name="identifier" type="date">
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date Should render with args { label: 'label', identifier: 'identifier', labelOnTop: true }: 1`] = `
<mg-input-date>
  <mock:shadow-root>
    <div class="mg-input mg-input--date mg-input--label-on-top">
      <mg-label identifier="identifier">
        label
      </mg-label>
      <div class="mg-input__input-container">
        <div class="mg-input__input-container__input">
          <input aria-describedby="" id="identifier" name="identifier" type="date">
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date Should render with args { label: 'label', identifier: 'identifier', readonly: true }: 1`] = `
<mg-input-date>
  <mock:shadow-root>
    <div class="mg-input mg-input--date mg-input--readonly">
      <mg-label identifier="identifier">
        label
      </mg-label>
      <div class="mg-input__input-container">
        <strong></strong>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date Should trigger events 1`] = `
<mg-input-date>
  <mock:shadow-root>
    <div class="is-focused mg-input mg-input--date">
      <mg-label identifier="identifier">
        label
      </mg-label>
      <div class="mg-input__input-container">
        <div class="mg-input__input-container__input">
          <input aria-describedby="identifier-help-text" id="identifier" name="identifier" type="date">
        </div>
        <div class="mg-input__input-container__help-text" id="identifier-help-text">
          My help text
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-date>
`;
